--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
   <title>Incentive Calculator</title>
 
-  <!-- Keep your existing PWA hooks as-is -->
   manifest.webmanifest
   <meta name="theme-color" content="#0f4c81"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -33,7 +32,7 @@
     .btn{width:100%;padding:12px 16px;background:var(--brand);color:#fff;border:0;border-radius:10px;font-size:16px}
     .muted{color:var(--muted);font-size:12px}
 
-    /* ===== Dynamic Progress Bar (unchanged logic, accurate tick placement) ===== */
+    /* ===== Dynamic Progress Bar (labels positioned precisely) ===== */
     .barWrap{margin-top:8px}
     .bar{position:relative;height:18px;border-radius:10px;background:var(--bar-bg);overflow:hidden}
     .fill{position:absolute;left:0;top:0;height:100%;
@@ -45,7 +44,7 @@
 
     .callout{border-left:4px solid #ef6c00;background:#fff7ed;color:#7c3f10;padding:8px 10px;border-radius:8px;margin-top:12px;font-size:14px;display:none}
 
-    /* ===== Speedometer (fixed) ===== */
+    /* ===== Speedometer (working) ===== */
     .gauge{position:relative;background:var(--card);border:1px solid #e7ebf0;border-radius:12px;padding:10px;display:flex;flex-direction:column;align-items:center}
     svg{max-width:520px;width:100%;height:auto}
     .pointer{transform-origin:0 0;transition:transform .5s ease}
@@ -120,12 +119,11 @@
       <p class="muted" id="outMsg" style="margin-top:8px"></p>
     </div>
 
-    <!-- Speedometer (fixed zones + precise needle) -->
+    <!-- Speedometer (working) -->
     <div class="gauge">
       <h3 style="margin:6px 0 6px">Incentive Speedometer</h3>
       <svg viewBox="-110 -120 220 170" id="gaugeSvg" aria-label="Speedometer">
         <g id="zones"></g>
-        <!-- Needle: horizontal line → we rotate the group to exact angle -->
         <g id="pointerGroup" style="pointer-events:none">
           <line id="needle" x1="0" y1="0" x2="72" y2="0" stroke="#111" stroke-width="4" stroke-linecap="round"/>
           <circle cx="0" cy="0" r="5" fill="#111"/>
@@ -146,7 +144,7 @@
   </div>
 
   <script>
-    /* ========== Indian number mask (caret preserved) ========== */
+    /* ===== Indian number mask (caret preserved) ===== */
     const INRfmt = new Intl.NumberFormat('en-IN',{maximumFractionDigits:0});
     const INR = new Intl.NumberFormat('en-IN',{style:'currency',currency:'INR',maximumFractionDigits:0});
     const PCT = v => (Math.round(v*10)/10)+'%';
@@ -171,7 +169,7 @@
       el.addEventListener('blur',()=>{el.value=formatIndian(el.value);});
     }
 
-    /* ========== Slabs (distinct red → green) ========== */
+    /* ===== Slabs & colors ===== */
     const SLABS = [
       { name:'Zone 1',  min:0,   max:95,   rate:0.00, color:'#D32F2F', label:'0–95% (No incentive)' },
       { name:'Zone 2',  min:95,  max:100,  rate:0.01, color:'#F57C00', label:'95–100% (0.5% at exactly 95%)' },
@@ -220,7 +218,7 @@
       return 7;
     }
 
-    /* ========== Dynamic Progress Bar (unchanged behavior) ========== */
+    /* ===== Dynamic Progress Bar: show only [0, 95, current zone min, next zone min] ===== */
     function ceilingForProgress(pct){
       if (pct < 95) return 95;
       if (pct < 100) return 115;
@@ -231,63 +229,67 @@
       if (pct < 300) return 300;
       return 300;
     }
-    function buildProgressBar(scaleMaxPct){
-      const bar=document.getElementById('bar'), labs=document.getElementById('barLabels');
-      [...bar.querySelectorAll('.tick')].forEach(n=>n.remove()); labs.innerHTML='';
-      const ticks=BOUNDS.filter(b=>b<=scaleMaxPct);
-      ticks.forEach(p=>{
-        const pos=(p/scaleMaxPct)*100;
-        const t=document.createElement('div'); t.className='tick'; t.style.left=`calc(${pos}% - 1px)`; bar.appendChild(t);
-        const sp=document.createElement('span'); sp.style.left=`${pos}%`; sp.textContent=p+'%'; labs.appendChild(sp);
+
+    // NEW: buildProgressBarCompact → only four labels
+    function buildProgressBarCompact(scaleMaxPct, currentMinPct, nextMinPct, showPlusAtEnd=false){
+      const bar  = document.getElementById('bar');
+      const labs = document.getElementById('barLabels');
+      // wipe
+      [...bar.querySelectorAll('.tick')].forEach(n=>n.remove());
+      labs.innerHTML='';
+
+      // Compose the four labels, remove duplicates, keep those within scale
+      const raw = [0, 95, currentMinPct, nextMinPct].filter(v => v!==null && v!==undefined);
+      const uniq = Array.from(new Set(raw)).filter(v => v<=scaleMaxPct).sort((a,b)=>a-b);
+
+      uniq.forEach((p, i)=>{
+        const pos = (p/scaleMaxPct)*100;
+        const t = document.createElement('div');
+        t.className='tick';
+        t.style.left=`calc(${pos}% - 1px)`;
+        bar.appendChild(t);
+
+        const sp = document.createElement('span');
+        sp.style.left=`${pos}%`;
+        // If we're at the end and asked to show 300%+ (when user >= 300)
+        if (showPlusAtEnd && p === scaleMaxPct && p === 300) {
+          sp.textContent = '300%+';
+        } else {
+          sp.textContent = p + '%';
+        }
+        labs.appendChild(sp);
       });
     }
 
-    /* ========== Speedometer (FIXED): 8 o’clock → 12 → 4 o’clock ========== */
+    /* ===== Speedometer (already working) ===== */
     const zonesG=document.getElementById('zones');
     const legend=document.getElementById('legend');
     const pointerGroup=document.getElementById('pointerGroup');
 
-    // Arc must pass through (-80,-20) (start) and (80,-20) (end)
-    const RADIUS = Math.hypot(80, 20);                 // ≈ 82.46
-    // Use SVG coordinate angles: x right, y down. atan2(y, x)
-    const START_DEG = Math.atan2(-20, -80) * 180/Math.PI;  // ≈ -166°  (≈ 194° mod 360 → ~8 o'clock)
-    const END_DEG   = Math.atan2(-20,  80) * 180/Math.PI;  // ≈  -14°  (≈ 346° mod 360 → ~4 o'clock)
-    // Map 0..300% to angles along the arc (clockwise sweep from start to end)
-    function pctToDeg(pct){
-      const p = clamp(pct, 0, 300);
-      return START_DEG + (p/300) * (END_DEG - START_DEG);
-    }
+    const RADIUS = Math.hypot(80, 20);
+    const START_DEG = Math.atan2(-20, -80) * 180/Math.PI;
+    const END_DEG   = Math.atan2(-20,  80) * 180/Math.PI;
+    function pctToDeg(pct){ const p=clamp(pct,0,300); return START_DEG + (p/300)*(END_DEG - START_DEG); }
     function deg2rad(d){ return (Math.PI/180)*d; }
-    function xy(angleDeg){
-      const a = deg2rad(angleDeg);
-      // SVG coords (no y-inversion): (x = R cos a, y = R sin a)
-      return [ RADIUS*Math.cos(a), RADIUS*Math.sin(a) ];
-    }
-    function arcPath(fromDeg, toDeg){
-      const [sx, sy] = xy(fromDeg), [ex, ey] = xy(toDeg);
-      const delta = toDeg - fromDeg;            // positive → clockwise along this arc
-      const largeArc = Math.abs(delta) > 180 ? 1 : 0;
-      const sweep    = delta >= 0 ? 1 : 0;      // 1 = clockwise, 0 = CCW
+    function xy(angleDeg){ const a=deg2rad(angleDeg); return [ RADIUS*Math.cos(a), RADIUS*Math.sin(a) ]; }
+    function arcPath(fromDeg,toDeg){
+      const [sx,sy]=xy(fromDeg), [ex,ey]=xy(toDeg);
+      const delta=toDeg-fromDeg, largeArc=Math.abs(delta)>180?1:0, sweep=delta>=0?1:0;
       return `M ${sx} ${sy} A ${RADIUS} ${RADIUS} 0 ${largeArc} ${sweep} ${ex} ${ey}`;
     }
     function buildGauge(){
       zonesG.innerHTML=''; legend.innerHTML='';
       SLABS.forEach((z,idx)=>{
-        // clamp to 0..300; draw a visible cap for 300%+
-        let sPct = Math.max(0, z.min);
-        let ePct = Math.min(300, z.max);
-        if (z.min >= 300){ sPct = 296; ePct = 300; } // tiny cap
-
-        const sAng = pctToDeg(sPct);
-        const eAng = pctToDeg(ePct);
-
+        let sPct=Math.max(0,z.min), ePct=Math.min(300,z.max);
+        if (z.min>=300){ sPct=296; ePct=300; } // tiny cap for 300%+
+        const sAng=pctToDeg(sPct), eAng=pctToDeg(ePct);
         const path=document.createElementNS('http://www.w3.org/2000/svg','path');
-        path.setAttribute('d', arcPath(sAng, eAng));
-        path.setAttribute('stroke', z.color);
+        path.setAttribute('d',arcPath(sAng,eAng));
+        path.setAttribute('stroke',z.color);
         path.setAttribute('stroke-width','14');
         path.setAttribute('fill','none');
         path.style.cursor='pointer';
-        path.addEventListener('click', ()=> showZoneDetails(idx));
+        path.addEventListener('click',()=>showZoneDetails(idx));
         zonesG.appendChild(path);
 
         const chip=document.createElement('div');
@@ -298,8 +300,8 @@
       });
     }
     function rotatePointerTo(pct){
-      const ang = pctToDeg(pct);   // degrees in SVG coordinate system
-      pointerGroup.setAttribute('transform', `rotate(${ang})`);
+      const ang=pctToDeg(pct);
+      pointerGroup.setAttribute('transform',`rotate(${ang})`);
     }
 
     function showZoneDetails(i){
@@ -325,7 +327,7 @@
       b.innerHTML=html;
     }
 
-    /* ========== Rewards (unchanged behavior, now reliable) ========== */
+    /* ===== Rewards (unchanged) ===== */
     let lastSlabIdx=-1;
     const REWARD_EMOJIS=['💪','🎉','👏','🥉','🥈','🥇','🏆','👑'];
     function triggerRewardIfSlabAdvanced(pct, exactly95){
@@ -362,7 +364,7 @@
       setTimeout(()=> overlay.classList.remove('show'),2200);
     }
 
-    /* ========== Validation + Calculation (unchanged) ========== */
+    /* ===== Validation + Calculation ===== */
     function validateInputs(){
       const tEl=document.getElementById('target');
       const aEl=document.getElementById('achieved');
@@ -407,25 +409,30 @@
       if (pct>=93 && pct<95){ miss.style.display='block'; document.getElementById('missAmt').innerText=INR.format(Math.ceil(0.95*target-achieved)); }
       else miss.style.display='none';
 
-      // Dynamic progress bar (0 → end of current slab)
-      const ceiling = (pct<95)?95 : (pct<100||pct<115?115 : (pct<125?125 : (pct<150?150 : (pct<200?200 : 300))));
-      buildProgressBar(ceiling);
+      // ===== Compact Progress Bar =====
+      const ceiling = ceilingForProgress(pct);                       // end of current slab (95/115/…/300)
+      const slabIdx = slabIndexForPct(pct, exactly95);
+      const currentMin = Math.min( (SLABS[slabIdx]?.min ?? 0), 300); // current zone min
+      const nextMin = (slabIdx < SLABS.length-1) ? Math.min(SLABS[slabIdx+1].min, 300) : 300; // next zone min
+      const showPlusAtEnd = pct >= 300;                              // when in 300%+ zone
+      buildProgressBarCompact(ceiling, currentMin, nextMin, showPlusAtEnd);
+
+      // Fill width (relative to this compact scale)
       document.getElementById('barFill').style.width = Math.min(pct/ceiling,1)*100 + '%';
 
-      // Gauge pointer to exact % (0..300)
+      // Gauge pointer
       rotatePointerTo(pct);
 
       // Rewards
       triggerRewardIfSlabAdvanced(pct, exactly95);
     }
 
-    /* ========== Init (unchanged) ========== */
+    /* ===== Init ===== */
     attachMask('target','err-target');
     attachMask('achieved','err-achieved');
     buildGauge();
     document.getElementById('btnCalc').addEventListener('click', calculate);
 
-    // SW registration unchanged
     if ('serviceWorker' in navigator){
       navigator.serviceWorker.register('./service-worker.js');
     }
